# runc-edge-api

./: CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  api.py  config.json  pyproject.toml
.github/: SDD.md
.github/workflows/: ci.yml  release.yml
runc_edge_api/: __init__.py  __main__.py  api.py
systemd/: restful-runc.service  runc-edge-api.service
tests/: test_api.py  test_package.py
